<resources>
    <string name="app_name">ExecuTorchLlamaDemo</string>
    <string name="demo_pref_file_key">DemoPrefFileKey</string>
    <string name="saved_messages_json_key">SavedMessagesJsonKey</string>
    <string name="settings_json_key">SettingsJsonKey</string>
    <string name="logs_json_key">LogsJsonKey</string>
    
    <string name="settings_title">Settings</string>
    <string name="logs_title">Logs</string>
    <string name="load_model">Load Model</string>
    <string name="select_model">Select Model</string>
    <string name="select_tokenizer">Select Tokenizer</string>
    <string name="clear_history">Clear Chat History</string>
    <string name="send_description">Send</string>
    <string name="stop_description">Stop</string>
    <string name="back_description">Back</string>
    
    <string name="initial_dialog_title">Please Select a Model</string>
    <string name="initial_dialog_message">To get started, please go to Settings and select a model and tokenizer file.</string>
    
    <string name="think_mode">Think mode</string>
...
